--- a/index.html
+++ b/index.html
@@ -24,507 +24,7 @@
 	<meta name="twitter:description" content="33web è uno studio di consulenti di marketing online di esperienza più che decennale. Siamo specializzati in Search Marketing, Ecommerce e Social Media.">
 	<meta name="twitter:image" content="https://www.33web.it/images/og-image-1200x630.jpg">
 
-	<style>
-    /* Reset margini e box-sizing */
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-
-    /* Stile pagina */
-    body {
-        font-family: system-ui;
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-        background-color: #d1d9d6;
-        color: #333;
-    }
-	
-	/* Stile di base per tutti i link */
-	a {
-		color: #1d3440; /* Colore del testo dei link */
-		transition: color 0.3s ease; /* Aggiunge una transizione per un effetto fluido */
-	}
-	
-	/* Stile hover per i link */
-	a:hover {
-		color: #005bb5; /* Colore in hover */
-		text-decoration: underline; /* Facoltativo: aggiunge la sottolineatura in hover */
-	}
-
-    /* Navbar */
-    .navbar {
-        background-color: #1d3440;
-        color: #fff;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 10px 20px;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        z-index: 1000;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    }
-
-    .navbar .logo img {
-        width: 50px;
-    }
-
-    /* Menu generico */
-    .menu {
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-    }
-	
-	/* Submenu */
-	.submenu {
-		position: absolute;
-		top: 100%;
-		left: -10px;
-		display: none;
-		list-style: none;
-		margin: 0;
-		padding: 20px 0 10px 0;
-		background-color: #1d3440;
-		border-radius: 5px;
-		/* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
-		width: 250px;
-	}
-	
-	.submenu li {
-		margin: 5px 0;
-		padding: 10px; /* Aggiunge spaziatura */
-	}
-	
-	.submenu li a {
-		color: #fff;
-		text-decoration: none;
-		font-size: 1em;
-		display: block;
-		width: 100%; /* Per prendere tutta la larghezza */
-	}
-	
-	.submenu li a:hover {
-		text-decoration: underline;
-	}
-	
-	/* Mostra il submenu al passaggio del mouse (solo su desktop) */
-	@media (min-width: 769px) {
-		.nav-primary li:hover .submenu {
-			display: block;
-		}
-	}
-	
-	/* Mobile: il submenu è già visibile */
-	@media (max-width: 768px) {
-		.submenu {
-			display: block; /* Già esploso */
-			position: static;
-			background-color: transparent;
-			padding: 10px 10px 0 10px;
-			box-shadow: none;
-		}
-	
-		.submenu li {
-			margin: 0; /* Niente margini tra le voci */
-			padding: 15px 0; /* Spazio verticale all'interno delle voci */
-		}
-		
-		/* Rimuovi o riduci la spaziatura dopo l'ultima voce del submenu */
-		.submenu li:last-child {
-			padding-bottom: 0; 
-		}
-
-		.submenu li a {
-			display: block;
-			padding: 0 10px; /* Un po' di spazio orizzontale così non è tutto attaccato a sinistra */
-		}
-	}
-	
-	.nav-links ul {
-		list-style: none; /* Rimuove i marcatori */
-	}
-
-    /* Menu link (nav-links) di default nascosti (mobile-first) */
-    .nav-links {
-        display: none;
-        list-style: none;
-    }
-
-    .nav-links li a {
-        color: #fff;
-        text-decoration: none;
-        font-size: 1.2em;
-    }
-
-    .nav-links li a:hover {
-        text-decoration: underline;
-    }
-
-    /* Mostra il menu se ha la classe active (usato per mobile) */
-    .nav-links.active {
-        display: flex;
-        flex-direction: column;
-        position: absolute;
-        top: 60px;
-        left: 0;
-        width: 100%;
-        background-color: #1d3440;
-        padding: 20px;
-        gap: 30px;
-    }
-
-    /* Sezioni del menu per desktop */
-    .nav-primary,
-    .nav-secondary {
-        display: flex;
-        gap: 30px;
-        margin: 0;
-        padding: 0;
-    }
-
-    /* Hamburger menu (mobile) */
-    .hamburger {
-        display: none;
-        flex-direction: column;
-        gap: 5px;
-        cursor: pointer;
-    }
-
-    .hamburger div {
-        width: 25px;
-        height: 3px;
-        background-color: #fff;
-    }
-
-    /* Desktop: menu visibile e disposto orizzontalmente */
-    @media (min-width: 769px) {
-        .nav-links {
-            display: flex;
-            flex-direction: row;
-            gap: 20px;
-            position: static;
-            background-color: transparent;
-            padding: 0;
-			justify-content: space-between;
-			width: 100%;
-			list-style: none;
-			padding: 0;
-			margin: 0;
-			margin-left: 30px; /* Spazio tra logo e menu */
-        }
-
-        .nav-primary {
-            margin-right: auto;
-        }
-		
-		.nav-primary li {
-			position: relative;
-		}
-		
-        .nav-secondary {
-            margin-left: auto;
-        }
-    }
-
-    /* Mobile: mostra hamburger, nasconde menu di default */
-    @media (max-width: 768px) {
-        .hamburger {
-            display: flex;
-        }
-
-        .nav-primary,
-        .nav-secondary {
-            flex-direction: column;
-            margin: 0;
-        }
-    }
-
-    /* Stile generale per la header-image */
-	.header-image {
-		width: 100%;
-		height: 300px;
-		background-size: cover;
-		background-position: center;
-		margin-top: 60px; /* Spazio per la navbar fissa */
-		position: relative;
-	}
-	
-	/* Immagine di sfondo per dispositivi desktop */
-	@media (min-width: 769px) {
-		.header-image {
-			background-image: url('images/header-image-04.jpg'); /* Immagine desktop */
-		}
-	}
-	
-	/* Immagine di sfondo per dispositivi mobili */
-	@media (max-width: 768px) {
-		.header-image {
-			background-image: url('images/header-image-04_mobile.jpg'); /* Immagine ottimizzata per mobile */
-		}
-	}
-
-    .header-logo {
-        position: absolute;
-        top: 40%;
-        left: 50%;
-        transform: translate(-50%, -30%);
-        text-align: center;
-        z-index: 10;
-    }
-
-    .header-logo img {
-        width: 100px;
-        height: auto;
-        margin-bottom: 10px;
-    }
-
-    .header-logo .subtitle {
-        font-size: 3em;
-        font-weight: bold;
-        color: #fff;
-        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
-    }
-
-    /* Contenitore principale */
-    .container {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        padding: 20px;
-        max-width: 950px;
-        margin: auto;
-    }
-
-    h1 {
-        font-size: 2em;
-        margin-bottom: 10px;
-    }
-
-    p {
-        font-size: 1.1em;
-        margin-bottom: 20px;
-    }
-
-    .cta-button {
-        padding: 10px 20px;
-        background-color: #1d3440;
-        color: #fff !important;
-        font-size: 1em;
-        text-decoration: none;
-        border-radius: 5px;
-        transition: background-color 0.3s;
-    }
-
-    .cta-button:hover {
-        background-color: #005bb5;
-		text-decoration: none; /* Evita sottolineature in hover */
-    }
-
-    /* Service boxes */
-    .services {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		text-align: center; /* Centra il testo del titolo */
-		padding: 20px;
-	}
-	
-	.services h2 {
-		font-size: 2em;
-		margin-bottom: 20px;
-		color: #333;
-	}
-	
-	.services-boxes {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: center;
-		gap: 20px;
-		width: 100%; /* Per far sì che i box si posizionino correttamente al centro */
-	}
-
-    .service-box {
-        background-color: #fff;
-        border: 1px solid #ccc;
-        border-radius: 8px;
-        padding: 20px;
-        width: 22%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        position: relative;
-        text-align: left;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        transition: transform 0.2s, box-shadow 0.2s;
-        min-height: 200px;
-    }
-
-    .service-box:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
-    }
-
-    .service-box h3 {
-        font-size: 1.5em;
-        margin-bottom: 10px;
-    }
-
-    .service-box p {
-        font-size: 1.1em;
-        color: #555;
-        margin: 15px 0 40px;
-        flex-grow: 1;
-    }
-
-    .service-box a {
-        position: absolute;
-        bottom: 10px;
-        right: 15px;
-        background-color: #1d3440;
-        color: #fff;
-        font-size: 1.2em;
-        text-decoration: none;
-        border-radius: 50%;
-        width: 40px;
-        height: 40px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        transition: background-color 0.3s;
-    }
-
-    .service-box a:hover {
-        background-color: #005bb5;
-    }
-
-    .service-header {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        height: 80px;
-    }
-
-    .service-icon {
-        width: 60px;
-        height: auto;
-    }
-	
-	.services h2 {
-		font-size: 2em;
-		text-align: center;
-		margin-bottom: 20px;
-		color: #333;
-	}
-
-	/* Regole aggiuntive per schermi medi */
-    @media (min-width: 769px) and (max-width: 1300px) {
-        .nav-links li a {
-            font-size: 1em;
-        }
-		
-		.service-box {
-			width: 45%; /* Circa la metà, così ne entrano due affiancati */
-		}
-    }
-
-    /* Responsive servizi */
-    @media (max-width: 768px) {
-        .service-box {
-            width: 100%;
-        }
-    }
-
-    /* Team boxes */
-    .team {
-        text-align: center;
-        padding: 40px 20px;
-        background-color: #f7f7f7;
-    }
-
-    .team h2 {
-        font-size: 2em;
-        margin-bottom: 20px;
-        color: #333;
-    }
-
-    .team-profiles {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 20px;
-    }
-
-    .team-member {
-        background-color: #fff;
-        border: 1px solid #ccc;
-        border-radius: 10px;
-        padding: 20px;
-        width: 22%;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        text-align: center;
-    }
-
-    .team-avatar {
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
-        margin-bottom: 15px;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    }
-
-    .team-member h3 {
-        font-size: 1.5em;
-        margin-bottom: 10px;
-        color: #1d3440;
-    }
-
-    .team-member p {
-        font-size: 1em;
-        color: #555;
-        margin-bottom: 15px;
-    }
-
-    .team-cta-text {
-        font-size: 1.2em;
-        margin-top: 30px;
-        color: #333;
-    }
-
-    /* Responsive team */
-    @media (max-width: 768px) {
-        .team-profiles {
-            flex-direction: column;
-        }
-
-        .team-member {
-            width: 100%;
-        }
-    }
-
-    /* Regole aggiuntive per breakpoint tra 1300px e 768px (già integrate sopra) */
-
-    /* Footer */
-    footer {
-        background-color: #1d3440;
-        color: #d1d9d6;
-        text-align: center;
-        padding: 20px;
-        font-size: 0.9em;
-    }
-
-    footer p {
-        margin-bottom: 5px;
-        line-height: 1;
-    }
-	</style>
+	<link rel="stylesheet" href="stili.css">
 
     <script>
 		document.addEventListener('DOMContentLoaded', function () {
