--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -92,7 +92,7 @@
     <!-- Main content -->
     <div class="container">
 		<h1>Chi siamo</h1>
-		<p>Scopri chi siamo, cosa ci appassiona e come possiamo aiutarti a crescere nel mondo digitale.</p>
+		<p>Siamo consulenti di marketing online di esperienza più che decennale e 33web è il nostro studio professionale. Scopri le nostre competenze e la nostra storia!</p>
 	
 		<div class="team-profiles">
 			<div class="team-member">
