Icona sito web su profili

--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -100,6 +100,7 @@
 					<img src="images/martino-mosna.jpg" alt="Martino Mosna" class="team-avatar">
 					<div class="contact-icons">
 						<a href="mailto:martino@33web.it"><img src="images/email.svg" alt="Email"></a>
+						<a href="https://www.martinomosna.com/"><img src="images/www.svg" alt="Personal website"></a>
 						<a href="https://www.linkedin.com/in/martinomosna" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn"></a>
 						<a href="https://bsky.app/profile/martinomosna.com" target="_blank"><img src="images/bluesky.svg" alt="BlueSky"></a>
 					</div>
@@ -132,6 +133,7 @@
 					<img src="images/roxana-todea.jpg" alt="Roxana Todea" class="team-avatar">
 					<div class="contact-icons">
 						<a href="mailto:roxana@33web.it"><img src="images/email.svg" alt="Email"></a>
+						<a href="https://it.roxanatodea.com/"><img src="images/www.svg" alt="Personal website"></a>
 						<a href="#" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn"></a>
 						<a href="#" target="_blank"><img src="images/instagram.svg" alt="Instagram"></a>
 					</div>
