--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -111,7 +111,7 @@
 					<p>È specialista di <a href="#">Search Marketing</a> perché <a href="#">SEO</a> e <a href="#">Pay Per Click</a> non sono alternative, ma due modi di comunicare sullo stesso canale.</p>
 					<p>Ha ideato “<a href="#">PIKAC</a>“, il metodo di lavoro SEO che parte dalle persone per arrivare ai contenuti senza lasciare nulla al caso.</p>
 					<p>È esperto di <a href="#">digital analytics</a>, perché se ha una connessione HTTP, allora lo puoi misurare. E misurare ciò che serve è il primo passo per migliorare davvero.</p>
-					<p>Infine, ma non per importanza, è orgoglioso membro del collettivo di professionisti <strong>Search Foundry</strong>.</p>
+					<p>Infine, ma non per importanza, è orgoglioso membro del collettivo di professionisti <a href="https://www.searchfoundry.pro/">Search Foundry</a>.</p>
 				</div>
 			</div>
 			<div class="team-member">
