--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -9,10 +9,10 @@
     <link rel="manifest" href="icons/site.webmanifest">
     <link rel="shortcut icon" href="icons/favicon.ico">
     <title>Chi sono i professionisti dello studio | 33web</title>
-	<meta name="description" content="33web è uno studio di consulenti di marketing online di esperienza più che decennale. Scopri cosa sappiamo fare e chiedici di più!">
+	<meta name="description" content="Siamo consulenti di marketing online specialisti di esperienza più che decennale. Scopri le nostre competenze e la nostra storia professionale!">
 	<!-- Open Graph meta tags -->
-	<meta property="og:title" content="33web | Studio di consulenza marketing online">
-	<meta property="og:description" content="33web è uno studio di consulenti di marketing online di esperienza più che decennale. Siamo specializzati in Search Marketing, Ecommerce e Social Media.">
+	<meta property="og:title" content="Chi sono i professionisti dello studio | 33web">
+	<meta property="og:description" content="Siamo consulenti di marketing online specialisti di esperienza più che decennale. Non facciamo tutto, non siamo un'agenzia, ma quello che sappiamo fare lo facciamo bene.">
 	<meta property="og:image" content="https://www.33web.it/images/og-image-1200x630.jpg">
 	<meta property="og:image:width" content="1200">
 	<meta property="og:image:height" content="630">
@@ -20,8 +20,8 @@
 	<meta property="og:site_name" content="33web">
 	<meta property="og:locale" content="it_IT">
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="33web | Studio di consulenza marketing online">
-	<meta name="twitter:description" content="33web è uno studio di consulenti di marketing online di esperienza più che decennale. Siamo specializzati in Search Marketing, Ecommerce e Social Media.">
+	<meta name="twitter:title" content="Chi sono i professionisti dello studio | 33web">
+	<meta name="twitter:description" content="Siamo consulenti di marketing online specialisti di esperienza più che decennale. Non facciamo tutto, non siamo un'agenzia, ma quello che sappiamo fare lo facciamo bene.">
 	<meta name="twitter:image" content="https://www.33web.it/images/og-image-1200x630.jpg">
 	
 	<link rel="stylesheet" href="stili.css">
