--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -135,8 +135,8 @@
 					<div class="contact-icons">
 						<a href="mailto:roxana@33web.it"><img src="images/email.svg" alt="Email"></a>
 						<a href="https://it.roxanatodea.com/"><img src="images/www.svg" alt="Personal website"></a>
-						<a href="#" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn"></a>
-						<a href="#" target="_blank"><img src="images/instagram.svg" alt="Instagram"></a>
+						<a href="https://www.linkedin.com/in/roxanatodea/" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn"></a>
+						<a href="https://www.instagram.com/roxxannet/" target="_blank"><img src="images/instagram.svg" alt="Instagram"></a>
 					</div>
 				</div>
 				<div class="profile-right">
