--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -120,7 +120,7 @@
 					<img src="images/elisa-poli.jpg" alt="Elisa Poli" class="team-avatar">
 					<div class="contact-icons">
 						<a href="mailto:elisa@33web.it"><img src="images/email.svg" alt="Email"></a>
-						<a href="#" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn"></a>
+						<a href="https://www.linkedin.com/in/elisa-poli-87076816/" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn"></a>
 					</div>
 				</div>
 				<div class="profile-right">
