--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -85,13 +85,13 @@
     <div class="header-image">
 		<div class="header-logo">
 			<img src="images/logo.png" alt="33web Logo">
-			<p class="subtitle">33web</p>
+			<p class="subtitle">Chi siamo</p>
 		</div>
 	</div>
 
     <!-- Main content -->
     <div class="container">
-		<h1>Chi siamo</h1>
+		<h1>Esperti al tuo fianco</h1>
 		<p>Siamo consulenti di marketing online specialisti di esperienza più che decennale e 33web è il nostro studio professionale. Non facciamo tutto, non siamo un'agenzia, ma quello che sappiamo fare lo facciamo bene.</p>
 		<p>Scopri le nostre competenze e la nostra storia professionale!</p>
 	
