--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -92,7 +92,7 @@
     <!-- Main content -->
     <div class="container">
 		<h1>Esperti al tuo fianco</h1>
-		<p>Siamo consulenti di marketing online specialisti di esperienza più che decennale e 33web è il nostro studio professionale. Non facciamo tutto, non siamo un'agenzia, ma quello che sappiamo fare lo facciamo bene.</p>
+		<p>Siamo consulenti di marketing online specialisti, di esperienza più che decennale e 33web è il nostro studio professionale. Non facciamo tutto, non siamo un'agenzia, ma quello che sappiamo fare lo facciamo bene.</p>
 		<p>Scopri le nostre competenze e la nostra storia professionale!</p>
 	
 		<div class="team-profiles">
