--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -190,8 +190,9 @@
 	</div>
 	
 	</div>
-
+	
     <!-- Footer -->
+	<div class="footer-image"></div>
     <footer>
         <p>33web di Elisa Poli</p>
         <p>Via Mosna di Vigolo 14/A, 38123 Trento</p>
