--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
 	</div>
 
     <!-- Footer -->
+	<div class="footer-image"></div>
     <footer>
         <p>33web di Elisa Poli</p>
         <p>Via Mosna di Vigolo 14/A, 38123 Trento</p>
