Bio Roxana e menu aggiornato

--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -60,6 +60,9 @@
 				</li>
 				<li>
 					<a href="#social-media">Social Media</a>
+					<ul class="submenu">
+						<li><a href="#campagne-social">Campagne social</a></li>
+					</ul>
 				</li>
 				<li>
 					<a href="#digital-analytics">Digital Analytics</a>
@@ -136,13 +139,15 @@
 						<a href="mailto:roxana@33web.it"><img src="images/email.svg" alt="Email"></a>
 						<a href="https://it.roxanatodea.com/"><img src="images/www.svg" alt="Personal website"></a>
 						<a href="https://www.linkedin.com/in/roxanatodea/" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn"></a>
-						<a href="https://www.instagram.com/roxxannet/" target="_blank"><img src="images/instagram.svg" alt="Instagram"></a>
 					</div>
 				</div>
 				<div class="profile-right">
 					<h3>Roxana Todea</h3>
-					<p>[Placeholder] Bio in fase di scrittura. Roxana è parte integrante del team, e presto potrai conoscere i dettagli della sua esperienza e delle sue competenze.</p>
-					<p>[Esempio] Roxana si dedica al social media management e alle digital strategies. La sua creatività e capacità di analisi trasformano ogni progetto in un successo.</p>
+					<p>Inizia la sua carriera nel 2007 come esperta di comunicazione e PR in agenzia. Dal 2011 lavora come freelance, collaborando con agenzie, aziende, istituzioni e organizzazioni internazionali.</p>
+					<p>Da anni supporta la crescita di startup e nuove realtà no profit a livello globale. È specialista in strategie digitali e <a href="#">social media</a>, con un’esperienza intersettoriale che unisce visione strategica orientata ai risultati e capacità analitica. </p>
+					<p>Media Buyer esperta su piattaforme Meta e LinkedIn, ha maturato una solida esperienza nella gestione di progetti B2B e B2C e nello sviluppo di <a href="#">campagne pubblicitarie</a> efficaci.</p>
+					<p>Quando non sta tracciando conversioni o ottimizzando campagne adv, la trovi con una fotocamera o immersa in un progetto video: per lei, la creatività è una parte essenziale del lavoro (anche se vorrebbe avere più tempo da dedicarci).</p>
+					<p>Tiene anche corsi di formazione e training su digital marketing e social media per aziende e ONG, sia online che in presenza.</p>
 				</div>
 			</div>
 		</div>
