--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
 				</li>
 				<li>
 					<a href="#social-media">Social Media</a>
+					<ul class="submenu">
+						<li><a href="#campagne-social">Campagne social</a></li>
+					</ul>
 				</li>
 				<li>
 					<a href="#digital-analytics">Digital Analytics</a>
