Pagina Search Marketing

--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -49,7 +49,7 @@
 		<div class="nav-links">
 			<ul class="nav-primary">
 				<li>
-					<a href="#search-marketing">Search Marketing</a>
+					<a href="search-marketing.html">Search Marketing</a>
 					<ul class="submenu">
 						<li><a href="#seo">Ottimizzazione (SEO)</a></li>
 						<li><a href="#ppc">Campagne PPC</a></li>
@@ -112,7 +112,7 @@
 				<div class="profile-right">
 					<h3>Martino Mosna</h3>
 					<p>Inizia a lavorare come SEO in agenzia nel 2006, dal 2011 lavora quotidianamente come freelance per agenzie ed aziende.</p>
-					<p>È specialista di <a href="#">Search Marketing</a> perché <a href="#">SEO</a> e <a href="#">Pay Per Click</a> non sono alternative, ma due modi di comunicare sullo stesso canale.</p>
+					<p>È specialista di <a href="search-marketing.html">Search Marketing</a> perché <a href="#">SEO</a> e <a href="#">Pay Per Click</a> non sono alternative, ma due modi di comunicare sullo stesso canale.</p>
 					<p>Ha ideato “<a href="#">PIKAC</a>“, il metodo di lavoro SEO che parte dalle persone per arrivare ai contenuti senza lasciare nulla al caso.</p>
 					<p>È esperto di <a href="#">digital analytics</a>, perché se ha una connessione HTTP, allora lo puoi misurare. E misurare ciò che serve è il primo passo per migliorare davvero.</p>
 					<p>Infine, ma non per importanza, è orgoglioso membro del collettivo di professionisti <a href="https://www.searchfoundry.pro/">Search Foundry</a>.</p>
@@ -163,7 +163,7 @@
 				<h3>Search Marketing</h3>
 			</div>
 			<p>Strategie di posizionamento e visibilità nei motori di ricerca.</p>
-			<a href="#">></a>
+			<a href="search-marketing.html">></a>
 		</div>
 	
 		<div class="service-box">
