--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<div class="nav-links">
 			<ul class="nav-primary">
 				<li>
-					<a href="#search-marketing">Search Marketing</a>
+					<a href="search-marketing.html">Search Marketing</a>
 					<ul class="submenu">
 						<li><a href="#seo">Ottimizzazione (SEO)</a></li>
 						<li><a href="#ppc">Campagne PPC</a></li>
@@ -110,7 +110,7 @@
 				<h3>Search Marketing</h3>
 			</div>
 			<p>Strategie di posizionamento e visibilità nei motori di ricerca.</p>
-			<a href="#">></a>
+			<a href="search-marketing.html">></a>
 		</div>
 	
 		<div class="service-box">
