--- a/search-marketing.html
+++ b/search-marketing.html
@@ -99,7 +99,7 @@
 		<div class="service-details">
 			<div class="service-card">
 				<h2>È meglio fare SEO o Pay Per Clic?</h2>
-				<p>La risposta è entrambe! Una <strong>visione d'insieme</strong> del mercato di ricerca è importante per assicurarsi la <strong>massima visibilità</strong> da parte del pubblico, al tempo stesso assicurandosi di investire i budget pubblicitari con <strong>efficienza</strong>.</p>
+				<p>La risposta è: entrambe! Una <strong>visione d'insieme</strong> del mercato di ricerca è importante per assicurarsi la <strong>massima visibilità</strong> da parte del pubblico, al tempo stesso assicurandosi di investire i budget pubblicitari con <strong>efficienza</strong>.</p>
 				<p>Noi consideriamo il motore di ricerca come un <strong>canale</strong> che le persone utilizzano tutti i giorni per <strong>trovare le cose</strong> che stanno cercando, siano esse informazioni, luoghi da visitare o prodotti da acquistare.</p>
 				<p>In questo scenario il posizionamento organico e quello sponsorizzato non sono in concorrenza, bensì sono <strong>strumenti complementari</strong> e se armonizzati correttamente permettono di ottenere risultati positivi <strong>duraturi</strong>.</p>
 			</div>
