--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 	<meta name="twitter:title" content="33web | Studio di consulenza marketing online">
 	<meta name="twitter:description" content="33web è uno studio di consulenti di marketing online di esperienza più che decennale. Siamo specializzati in Search Marketing, Ecommerce e Social Media.">
 	<meta name="twitter:image" content="https://www.33web.it/images/og-image-1200x630.jpg">
-
+	
+	<link rel="preload" fetchpriority="high" as="image" href="images/bg-search-marketing.jpg" type="image/jpg">
 	<link rel="stylesheet" href="stili.css">
 
     <script>
