Preload immagine header

--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -24,6 +24,8 @@
 	<meta name="twitter:description" content="Siamo consulenti di marketing online specialisti di esperienza più che decennale. Non facciamo tutto, non siamo un'agenzia, ma quello che sappiamo fare lo facciamo bene.">
 	<meta name="twitter:image" content="https://www.33web.it/images/bg-chi-siamo_og.jpg">
 	
+	<link rel="preload" fetchpriority="high" as="image" href="images/bg-chi-siamo_mobile.jpg" type="image/jpg">
+	<link rel="preload" fetchpriority="high" as="image" href="images/bg-chi-siamo.jpg" type="image/jpg">
 	<link rel="stylesheet" href="stili.css">
 	
     <script>
